chore: update colour theme and add body id

--- a/new-tab/index.html
+++ b/new-tab/index.html
@@ -8,12 +8,12 @@
     <meta name="color-scheme" content="light dark">
     <style type="text/css" media="screen">
       body {
-        background-color: white;
+        background-color: #e8e8e8;
         color: black;
       }
       @media (prefers-color-scheme: dark) {
         body {
-          background-color: black;
+          background-color: #1e1f21;
           color: white;
         }
       }
